Sanitize notebooks: Replaced W&B credentials with placeholders

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -61,8 +61,8 @@
     "# Setup Test Data\n",
     "TEST_DATASET_PATH = Path(\"last-test\")\n",
     "IMG_EXTS = [\".jpg\", \".jpeg\", \".png\"]\n",
-    "WANDB_PROJECT = \"paper_experiment_mixed\"\n",
-    "WANDB_ENTITY = \"abd-eldjalil-taibi-ensia\" \n",
+    "WANDB_PROJECT = \"YOUR_WANDB_PROJECT\"\n",
+    "WANDB_ENTITY = \"YOUR_WANDB_ENTITY\" \n",
     "\n",
     "def create_test_yaml(test_path, run_name):\n",
     "    \"\"\"\n",
