--- a/yolo_obb_mixed_training.ipynb
+++ b/yolo_obb_mixed_training.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "# --- MODEL CONFIG ---\n",
     "BASE_MODEL = \"yolo26l-obb.pt\"  # Training from scratch using this architecture\n",
-    "WANDB_PROJECT = \"paper_experiment_mixed\"\n",
+    "WANDB_PROJECT = \"YOUR_WANDB_PROJECT\"\n",
     "img_exts = [\".jpg\", \".jpeg\", \".png\"]\n",
     "\n",
     "# --- TRAINING PARAMETERS (FROM SCRATCH) ---\n",
