--- a/yolo_obb_finetuning_unfrozen.ipynb
+++ b/yolo_obb_finetuning_unfrozen.ipynb
@@ -125,8 +125,8 @@
     "DRIVE_UPLOAD_FOLDER = Path(\"YOLO_OBB_FineTuning_Results\")  # Local path for school server\n",
     "\n",
     "# W&B Configuration\n",
-    "WANDB_PROJECT = \"paper_experiment_mixed\"\n",
-    "WANDB_ENTITY = \"abd-eldjalil-taibi-ensia\" # Or your entity\n",
+    "WANDB_PROJECT = \"YOUR_WANDB_PROJECT\"\n",
+    "WANDB_ENTITY = \"YOUR_WANDB_ENTITY\" # Or your entity\n",
     "\n",
     "# Training Hyperparameters (Optimized for Fine-tuning)\n",
     "FINETUNE_CONFIG = {\n",
